8337876: [IR Framework] Add support for IR tests with @Stable